Primer avanze introduccion y marco teorico

--- a/documento/bibliography.bib
+++ b/documento/bibliography.bib
@@ -1,4 +1,4 @@
-jum@article{mikolov2013word2vec,
+@article{mikolov2013word2vec,
   title   = {Efficient Estimation of Word Representations in Vector Space},
   author  = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
   journal = {arXiv preprint arXiv:1301.3781},
@@ -10,6 +10,37 @@ jum@article{mikolov2013word2vec,
   author       = {Sebastián Ramírez},
   howpublished = {\url{https://fastapi.tiangolo.com/}},
   year         = {2019}
+}
+
+@book{jurafsky2023speech,
+  title     = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
+  author    = {Jurafsky, Dan and Martin, James H.},
+  year      = {2023},
+  publisher = {Pearson},
+  edition   = {3rd}
+}
+
+@article{ricci2011introduction,
+  title     = {Introduction to Recommender Systems Handbook},
+  author    = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+  journal   = {Recommender Systems Handbook},
+  pages     = {1--35},
+  year      = {2011},
+  publisher = {Springer}
+}
+
+@misc{langchain,
+  title        = {LangChain},
+  author       = {LangChain AI},
+  howpublished = {\url{https://www.langchain.com/}},
+  year         = {2022}
+}
+
+@misc{react,
+  title        = {React - A JavaScript library for building user interfaces},
+  author       = {Meta},
+  howpublished = {\url{https://react.dev/}},
+  year         = {2013}
 }
 
 
