nuevas imagenes incluidas

--- a/documento/appendices/C-figuras-aplicacion.tex
+++ b/documento/appendices/C-figuras-aplicacion.tex
@@ -1,28 +1,71 @@
+\usepackage{float}
 \chapter{Figuras de la aplicación}
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{SubirCV.png}
-    \caption{Interfaz: Subir CV}
-    \label{fig:ui-subir-cv}
-\end{figure}
-
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{SubirOfertaDeTrabajo.png}
     \caption{Interfaz: Subir oferta de trabajo}
     \label{fig:ui-crear-job}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{AnalizarCv_vs_Job.png}
     \caption{Interfaz: Analizar CV vs Job}
     \label{fig:ui-analizar}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{TopCandidatos.png}
     \caption{Interfaz: Ranking de candidatos}
     \label{fig:ui-ranking}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Arquitectura_por_capas.png}
+    \caption{Diagrama: Arquitectura por capas}
+    \label{fig:diagram-arquitectura}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Secuencia_Subir_Cv.png}
+    \caption{Secuencia: Subir CV (POST /cvs)}
+    \label{fig:seq-subir-cv}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Secuencia_Crear_Job.png}
+    \caption{Secuencia: Crear Job (POST /jobs)}
+    \label{fig:seq-crear-job}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{SecuenciaAnalizar.png}
+    \caption{Secuencia: Analizar CV vs Job (POST /analyze/\{cv\_id\}/\{job\_id\})}
+    \label{fig:seq-analizar}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{ModeloEntidadRelacion.png}
+    \caption{Modelo de datos (ER)}
+    \label{fig:er-modelo}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Actividad_Protocolo_de_evaluacion.png}
+    \caption{Actividad: Protocolo de evaluación}
+    \label{fig:actividad-evaluacion}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Mapa_de_endpoints.png}
+    \caption{Mapa de endpoints}
+    \label{fig:mapa-endpoints}
 \end{figure}
