--- a/documento/main.tex
+++ b/documento/main.tex
@@ -69,8 +69,7 @@
 \IfFileExists{chapters/02-marco-teorico.tex}{\input{chapters/02-marco-teorico}}{\chapter{Marco Teórico} Contenido placeholder.}
 \IfFileExists{chapters/03-estado-del-arte.tex}{\input{chapters/03-estado-del-arte}}{\chapter{Estado del Arte} Contenido placeholder.}
 \IfFileExists{chapters/04-metodologia.tex}{\input{chapters/04-metodologia}}{\chapter{Metodología} Contenido placeholder.}
-\IfFileExists{chapters/05-diseno-arquitectura.tex}{\input{chapters/05-diseno-arquitectura}}{\chapter{Diseño y Arquitectura} Contenido placeholder.}
-\IfFileExists{chapters/06-implementacion.tex}{\input{chapters/06-implementacion}}{\chapter{Implementación} Contenido placeholder.}
+\IfFileExists{chapters/05-diseno-implementacion.tex}{\input{chapters/05-diseno-implementacion}}{\chapter{Diseño, Arquitectura e Implementación} Contenido placeholder.}
 \IfFileExists{chapters/07-experimentos-resultados.tex}{\input{chapters/07-experimentos-resultados}}{\chapter{Experimentos y Resultados} Contenido placeholder.}
 \IfFileExists{chapters/08-discusion-amenazas.tex}{\input{chapters/08-discusion-amenazas}}{\chapter{Discusión y Amenazas a la Validez} Contenido placeholder.}
 \IfFileExists{chapters/09-conclusiones-trabajo-futuro.tex}{\input{chapters/09-conclusiones-trabajo-futuro}}{\chapter{Conclusiones y Trabajo Futuro} Contenido placeholder.}
