--- a/documento/main.tex
+++ b/documento/main.tex
@@ -78,10 +78,8 @@
 % ======= Apéndices =======
 \appendix
 \makeatletter
-\IfFileExists{appendices/A-datasets-y-prompts.tex}{\input{appendices/A-datasets-y-prompts}}{\chapter{Datasets y Prompts} Contenido placeholder.}
-\IfFileExists{appendices/B-instrumentos-y-scripts.tex}{\input{appendices/B-instrumentos-y-scripts}}{\chapter{Instrumentos y Scripts} Contenido placeholder.}
-\IfFileExists{appendices/C-figuras-aplicacion.tex}{\input{appendices/C-figuras-aplicacion}}{\chapter{Figuras de la aplicación} Contenido placeholder.}
-\IfFileExists{appendices/D-prompts.tex}{\input{appendices/D-prompts}}{\chapter{Prompts utilizados} Contenido placeholder.}
+\IfFileExists{appendices/A-figuras-aplicacion.tex}{\input{appendices/A-figuras-aplicacion}}{\chapter{Figuras de la aplicación} Contenido placeholder.}
+\IfFileExists{appendices/B-prompts.tex}{\input{appendices/B-prompts}}{\chapter{Prompts utilizados} Contenido placeholder.}
 \makeatother
 
 % ======= Bibliografía =======
