nueva imagen arquitectura de la aplicacion

--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -23,8 +23,8 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\linewidth]{Arquitectura_por_capas.png}
-    \caption{Diagrama: Arquitectura por capas}
+    \includegraphics[width=0.5\linewidth]{Arquitectura_aplicacion.png}
+    \caption{Diagrama: Arquitectura de la aplicación}
     \label{fig:diagram-arquitectura}
 \end{figure}
 
