--- a/documento/main.tex
+++ b/documento/main.tex
@@ -80,6 +80,7 @@
 \makeatletter
 \IfFileExists{appendices/A-figuras-aplicacion.tex}{\input{appendices/A-figuras-aplicacion}}{\chapter{Figuras de la aplicación} Contenido placeholder.}
 \IfFileExists{appendices/B-prompts.tex}{\input{appendices/B-prompts}}{\chapter{Prompts utilizados} Contenido placeholder.}
+\IfFileExists{appendices/C-Api.tex}{\input{appendices/C-Api}}{\chapter{Documentación de la API} Contenido placeholder.}
 \makeatother
 
 % ======= Bibliografía =======
