cambio estructura services

--- a/documento/appendices/C-Api.tex
+++ b/documento/appendices/C-Api.tex
@@ -4,6 +4,7 @@
 Este apéndice presenta la documentación detallada de los endpoints de la API REST desarrollada con FastAPI. Se incluyen los métodos HTTP, las rutas, los parámetros requeridos y las descripciones funcionales de cada operación.
 
 \section{Gestión de Hojas de Vida (HVs)}
+\label{sec:api-hvs}
 
 \begin{description}
     \item[POST /cvs]
@@ -48,6 +49,7 @@ Este apéndice presenta la documentación detallada de los endpoints de la API R
 \end{description}
 
 \section{Gestión de Descripciones de Trabajo (Jobs)}
+\label{sec:api-jobs}
 
 \begin{description}
     \item[POST /jobs]
@@ -92,6 +94,7 @@ Este apéndice presenta la documentación detallada de los endpoints de la API R
 \end{description}
 
 \section{Análisis y Recomendaciones}
+\label{sec:api-analysis}
 
 \begin{description}
     \item[POST /analyze/\{cv\_id\}/\{job\_id\}]
