--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -43,13 +43,12 @@
     \label{fig:seq-analizar}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{ModeloEntidadRelacion.png}
-    \caption{Modelo de datos (ER)}
-    \label{fig:er-modelo}
+    \includegraphics[width=0.5\linewidth]{Flujo_de_Persistencia.png}
+    \caption{Flujo de Persistencia (Ejemplo con Analysis)}
+    \label{fig:flujo_persistencia_analysis}
 \end{figure}
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{Actividad_Protocolo_de_evaluacion.png}
@@ -62,4 +61,10 @@
     \includegraphics[width=0.5\linewidth]{Mapa_de_endpoints.png}
     \caption{Mapa de endpoints}
     \label{fig:mapa-endpoints}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{DetallesImplementacionDatos.png}
+    \caption{Detalles de la implementación en la capa de datos}
+    \label{fig:DetallesImplementacionDatos}
 \end{figure}
