--- a/documento/bibliography.bib
+++ b/documento/bibliography.bib
@@ -49,7 +49,8 @@
   journal={Advances in neural information processing systems},
   volume={33},
   pages={1877--1901},
-  year={2020}
+  year={2020},
+  url={https://proceedings.neurips.cc/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf}
 }
 
 @article{liu2023pre,
@@ -60,12 +61,22 @@
   number={9},
   pages={1--35},
   year={2023},
-  publisher={ACM New York, NY}
+  publisher={ACM New York, NY},
+  url={https://dl.acm.org/doi/abs/10.1145/3560815}
 }
 
 @article{white2023prompt,
   title={A prompt pattern catalog to enhance prompt engineering with chatgpt},
   author={White, Jules and Fu, Quchen and Hays, Sam and Sandborn, Michael and Olea, Carlos and Gilbert, Henry and Elnashar, Ashraf and Spencer-Smith, Jesse and Schmidt, Douglas C},
   journal={arXiv preprint arXiv:2302.11382},
-  year={2023}
+  year={2023},
+  url={https://arxiv.org/abs/2302.11382}
+}
+
+@misc{promptguide2024,
+  title        = {Técnicas de Prompting | Prompt Engineering Guide},
+  author       = {DAIR.AI},
+  year         = {2024},
+  howpublished = {\url{https://www.promptingguide.ai/es/techniques}},
+  note         = {Consultado: 2024-05-20}
 }
