cambios 4:50pm 20 nov

--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -68,3 +68,17 @@
     \caption{Detalles de la implementación en la capa de datos}
     \label{fig:DetallesImplementacionDatos}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Flujo_Inferir_Habilidades_Blandas.png}
+    \caption{Flujo inferir habilidades blandas en descripciones}
+    \label{fig:Flujo_Inferir_Habilidades_Blandas}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Flujo_Inferir_Lenguaje.png}
+    \caption{Flujo inferir lenguaje en descripciones}
+    \label{fig:Flujo_Inferir_Lenguaje}
+\end{figure}
