--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -82,3 +82,10 @@
     \caption{Flujo inferir lenguaje en descripciones}
     \label{fig:Flujo_Inferir_Lenguaje}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Flujo_Comparaciones_Certificaciones.png}
+    \caption{Flujo de comparaciones de certificaciones CV vs Descripción}
+    \label{fig:placeholder}
+\end{figure}
