finalizacion capitulo 05 diseño

--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -1,27 +1,6 @@
 \usepackage{float}
+
 \chapter{Figuras de la aplicación}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\linewidth]{SubirOfertaDeTrabajo.png}
-    \caption{Interfaz: Subir oferta de trabajo}
-    \label{fig:ui-crear-job}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\linewidth]{AnalizarCv_vs_Job.png}
-    \caption{Interfaz: Analizar CV vs Job}
-    \label{fig:ui-analizar}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\linewidth]{TopCandidatos.png}
-    \caption{Interfaz: Ranking de candidatos}
-    \label{fig:ui-ranking}
-\end{figure}
-
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\linewidth]{Secuencia_Subir_Cv.png}
@@ -87,5 +66,133 @@
     \centering
     \includegraphics[width=0.5\linewidth]{Flujo_Comparaciones_Certificaciones.png}
     \caption{Flujo de comparaciones de certificaciones CV vs Descripción}
+    \label{fig:flujo-comparacion-certificaciones}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{SubirOfertaDeTrabajo.png}
+    \caption{Interfaz: Vista subir oferta de trabajo}
+    \label{fig:ui-crear-job}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Subir_CV.png}
+    \caption{Interfaz: Vista subir Hoja de Vida}
+    \label{fig:ui-subir-cv}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{AnalizarCv_vs_Job.png}
+    \caption{Interfaz: Vista analizar CV vs Job}
+    \label{fig:ui-analizar}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Listar_CVs.png}
+    \caption{Interfaz: Vista Listar Hojas de Vida}
+    \label{fig:ui-listar-cvs}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Listar_Descripciones.png}
+    \caption{Interfaz: Vista Listar Descripciones}
+    \label{fig:ui-listar-jobs}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Historial_Analisis.png}
+    \caption{Interfaz: Vista Historial Analisis}
+    \label{fig:ui-historial-analisis}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{TopCandidatos.png}
+    \caption{Interfaz: Vista Ranking de candidatos}
+    \label{fig:ui-ranking}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{VistaResumenResultadoAnalisis.png}
+    \caption{Interfaz: Vista Resumen Resultado Análisis}
+    \label{fig:ui-resumen-analisis}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.50\linewidth]{Vista_Resultados_Comparacion.png}
+    \caption{Interfaz: Vista de resultados y desglose por aspecto}
+    \label{fig:frontend-resultados}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{VistaGraficaAnalisis.png}
+    \caption{Interfaz: Vista Grafica Score Obtenido vs Porcentaje de Criterios Evaluados}
+    \label{fig:ui-grafica-score}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalle_InfoPersonal.png}
+    \caption{Interfaz: Vista del detalle de información personal de la Hoja de Vida}
+    \label{fig:ui-cv-info-personal}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalle_Educacion.png}
+    \caption{Interfaz: Vista del detalle de educación de la Hoja de Vida}
+    \label{fig:ui-cv-educacion}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalle_Experiencia.png}
+    \caption{Interfaz: Vista del detalle de experiencia laboral de la Hoja de Vida}
+    \label{fig:ui-cv-experiencia}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalles_Habilidades.png}
+    \caption{Interfaz: Vista del detalle de habilidades técnicas de la Hoja de Vida}
+    \label{fig:ui-cv-habilidades}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalles_Certificaciones.png}
+    \caption{Interfaz: Vista del detalle de certificaciones de la Hoja de Vida}
+    \label{fig:ui-cv-certificaciones}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalles_Idiomas.png}
+    \caption{Interfaz: Vista del detalle de idiomas de la Hoja de Vida}
+    \label{fig:ui-cv-idiomas}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_CV_Detalle_AnalisisHechosPorCV.png}
+    \caption{Interfaz: Vista del detalle de análisis realizados para una Hoja de Vida}
+    \label{fig:ui-cv-analisis-realizados}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Descripcion_Detalle_InformacionGeneral.png}
+    \caption{Interfaz: Vista la información general de una descripción}
+    \label{fig:ui-job-informacion-general}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{Vista_Descripcion_Detalles_Requisitos.png}
+    \caption{Interfaz: Vista de los requisitos de una descripción}
     \label{fig:placeholder}
 \end{figure}
